Mon May 30 06:39:12 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Sequence_Unit_Tests/string_sequence_tester.hpp:
        * tests/Smart_Proxies/Benchmark/client.cpp:
          Resolved gcc 4.6 warnings: variable was set but not used.

Fri May 27 14:35:57 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_2936_Regression/bug2936.cpp:
        * tests/Bug_3926_Regression/Client_Request_Interceptor.cpp:
        * tests/Exposed_Policies/RT_Properties.cpp:
        * tests/IOR_Endpoint_Hostnames/list_interfaces.cpp:
          Resolved gcc 4.6 warnings: variable was set but not used.

        * tests/POA/Bug_2511_Regression/server.cpp:
          Resolved gcc 4.6 warnings: variable was set but not used.
          Code alignment.

Fri May 27 14:13:08 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * performance-tests/POA/Demux/demux_test_server.cpp:
        * tests/Bug_2677_Regression/DllORB.cpp:
        * tests/Bug_2683_Regression/server.cpp:
          Resolved gcc 4.6 warnings: variable was set but not used.

Fri May 27 13:52:37 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_union/union_ch.cpp:
          Removed generation of holder_ member of an union, it is not used
          at all

Fri May 27 10:09:25 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * orbsvcs/examples/ImR/Advanced/TestClient.cpp:
        * orbsvcs/tests/IOR_MCast/client.cpp:
        * orbsvcs/tests/Security/Bug_1107_Regression/client.cpp:
          Statisfy Coverity and the GNU 4.6 gcc compiler. Using a
          returned value either by using ACE_UNUSED_ARG or to print
          in a log message.

        * tests/Sequence_Unit_Tests/value_sequence_tester.hpp:
          Fuzz.

Fri May 27 09:14:29 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * orbsvcs/LoadBalancer/LoadMonitor.cpp:
        * orbsvcs/examples/ImR/Advanced/TestClient.cpp:
        * orbsvcs/tests/Bug_3486_Regression/server.cpp:
        * orbsvcs/tests/IOR_MCast/client.cpp: